--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mailing-contact-cleaner",
+  "name": "mailchimp-janitor",
   "version": "1.0.0",
-  "description": "Clean up duplicates and bouncy email address from our lists",
+  "description": "A simple node script to keep our Mailchimp lists clean from duplicate and bouncy email addresses",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
